Fix: Fix ASCII art component from overlapping the containers width.

--- a/static/style.css
+++ b/static/style.css
@@ -18,8 +18,7 @@
 }
 
 body {
-  width: 1200px;
-  font-size: 20px;
+  width: 85%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -34,16 +33,16 @@ header {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px auto;
-  padding: 10px;
-  width: 90%;
+  padding: 10px 0;
+  width: 95%;
 }
 
 header .theme-modes {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 10px;
-  width: 10%;
+  column-gap: 5px;
+  width: 15%;
   z-index: 5;
   cursor: pointer;
   transition: var(--transition);
@@ -51,9 +50,6 @@ header .theme-modes {
 
 header .theme-modes p {
   font-size: 10px;
-  color: black;
-  border-radius: 10px;
-  padding: 3px 0;
   display: none;
   transition: var(--transition);
 }
@@ -75,9 +71,9 @@ header .theme-modes.active .moon {
 }
 
 .container {
-  width: 90%;
+  width: 95%;
   margin: 20px auto;
-  padding: 30px;
+  padding: 30px 15px;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   display: flex;
@@ -91,7 +87,7 @@ header .theme-modes.active .moon {
 }
 
 .container .upper {
-  width: 85%;
+  width: 95%;
   display: grid;
   place-items: center;
 }
@@ -128,6 +124,8 @@ header .theme-modes.active .moon {
 
 .container form .right select {
   padding: 4px 8px;
+  font-size: 18px;
+  margin-top: 5px;
 }
 
 .container form .right input {
@@ -137,7 +135,7 @@ header .theme-modes.active .moon {
   border: none;
   background-color: black;
   color: white;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
 }
 .container.dark-mode form .right input {
@@ -149,14 +147,15 @@ header .theme-modes.active .moon {
   width: 80%;
   background-color: black;
   height: 1px;
-  margin: 25px auto;
+  margin: 50px auto 25px;
 }
 body.dark-mode .line {
   background-color: white;
 }
 
 .container .lower {
-  max-width: 90%;
+  /* max-width: 90%; */
+  width: 95%;
   overflow-x: auto;
 }
 
@@ -166,8 +165,6 @@ body.dark-mode .line {
   white-space: pre;
   word-wrap: break-word;
   font-family: monospace;
-  word-spacing: normal;
-  word-break: normal;
 }
 
 footer {
@@ -180,6 +177,7 @@ footer {
 footer a {
   color: black;
   cursor: pointer;
+  transition: var(--transition);
 }
 body.dark-mode footer a {
   color: white;
